[package]
name = "blockchain"
version = "0.1.0"
authors = ["Adam Szalkowski <adam@szalkowski.de>"]

[dependencies]
bodyparser = "0.8"
futures = "0.1"
hyper = "0.11"
iron = "0.6"
logger = "0.4"
quick-error = "*"
rayon = "0.9"
router = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.6"
time = "0.1"
tokio-core = "0.1"
